Pre-alpha: Feat: Menu bar

--- a/src/components/Adder/Adder.scss
+++ b/src/components/Adder/Adder.scss
@@ -10,7 +10,7 @@
 
 .checkbox-style {
   border: solid 2px $DarkGrayishBlue;
-  border-radius: 50% !important;
+  border-radius: 10px !important;
   min-width: 40px;
   min-height: 42.5px;
   &.unchecked {
