--- a/src/components/Tasks/Tasks.scss
+++ b/src/components/Tasks/Tasks.scss
@@ -4,3 +4,30 @@
   text-decoration: line-through !important;
   color: $VeryDarkGrayishBlue2 !important;
 }
+
+.close-button {
+  background-color: transparent !important;
+  border: none !important;
+  &:focus {
+    box-shadow: none !important;
+  }
+}
+
+.radius {
+  border-radius: 0 !important;
+  border-bottom: 1px solid $DarkGrayishBlue;
+  &.first {
+    border-radius: 10px 10px 0 0 !important;
+  }
+}
+
+.close-button-column {
+  right: -9px !important;
+  padding: 8px 0 !important;
+}
+
+@media (max-width: 992px) {
+  .close-button-column {
+    right: 0 !important;
+  }
+}
